src/test/ui/resolve/issue-46209-private-enum-variant-reexport.stderr
error: variant is private and cannot be reexported
  --> $DIR/issue-46209-private-enum-variant-reexport.rs:16:32
   |
16 |     pub use self::Lieutenant::{JuniorGrade, Full};
   |                                ^^^^^^^^^^^
...
31 |     enum Lieutenant {
   |     --------------- help: consider making the enum public: `pub enum Lieutenant`

error: variant is private and cannot be reexported
  --> $DIR/issue-46209-private-enum-variant-reexport.rs:16:45
   |
16 |     pub use self::Lieutenant::{JuniorGrade, Full};
   |                                             ^^^^

error: enum is private and its variants cannot be reexported
  --> $DIR/issue-46209-private-enum-variant-reexport.rs:14:13
   |
14 |     pub use self::Professor::*;
   |             ^^^^^^^^^^^^^^^^^^^
...
24 |     enum Professor {
   |     -------------- help: consider making the enum public: `pub enum Professor`

error: enum is private and its variants cannot be reexported
  --> $DIR/issue-46209-private-enum-variant-reexport.rs:19:13
   |
19 |     pub use self::PettyOfficer::*;
   |             ^^^^^^^^^^^^^^^^^^^^^^
...
36 |     pub(in rank) enum PettyOfficer {
   |     ------------------------------ help: consider making the enum public: `pub enum PettyOfficer`

error: enum is private and its variants cannot be reexported
  --> $DIR/issue-46209-private-enum-variant-reexport.rs:21:13
   |
21 |     pub use self::Crewman::*;
   |             ^^^^^^^^^^^^^^^^^
...
43 |     crate enum Crewman {
   |     ------------------ help: consider making the enum public: `pub enum Crewman`

error: aborting due to 5 previous errors

